--- a/Clients/SimpleWeb/web/package.json
+++ b/Clients/SimpleWeb/web/package.json
@@ -8,9 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "apexcharts": "^3.27.3",
     "core-js": "^3.6.5",
+    "install": "^0.13.0",
     "mitt": "^3.0.0",
-    "vue": "^3.0.0"
+    "npm": "^7.20.6",
+    "vue": "^3.0.0",
+    "vue3-apexcharts": "^1.4.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
@@ -36,7 +40,7 @@
     "rules": {}
   },
   "browserslist": [
-    "> 1%",
+    "> 10%",
     "last 2 versions",
     "not dead"
   ]
