--- a/.github/workflows/client-build.yml
+++ b/.github/workflows/client-build.yml
@@ -17,7 +17,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [14.x, 15.x]
+        node-version: [14.x]
 
     steps:
       - uses: actions/checkout@v2
@@ -26,6 +26,7 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       # Clients - SimpleWeb
-      - run: cd ./Clients/SimpleWeb/web
-      - run: npm ci
-      - run: npm run build
+      - run: |
+          cd ./Clients/SimpleWeb/web;
+          npm ci;
+          npm run build;
