--- a/.github/workflows/client-release.yml
+++ b/.github/workflows/client-release.yml
@@ -12,7 +12,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [14.x, 15.x]
+        node-version: [14.x]
 
     steps:
       - uses: actions/checkout@v2
@@ -21,9 +21,10 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       # Clients - SimpleWeb
-      - run: cd ./Clients/SimpleWeb/web
-      - run: npm ci
-      - run: npm run build
+      - run: |
+          cd ./Clients/SimpleWeb/web;
+          npm ci;
+          npm run build;
 
       - uses: "marvinpinto/action-automatic-releases@latest"
         with:
