Automating build for node-red ui. Cleanups and build updates.

--- a/.github/workflows/client-build.yml
+++ b/.github/workflows/client-build.yml
@@ -30,3 +30,7 @@ jobs:
           cd ./Clients/SimpleWeb/web;
           npm ci;
           npm run build;
+      # Clients - Node-RED
+      - run: |
+          cd ./Clients/Node-Red;
+          node build.js;
