Build updates for path

--- a/.github/workflows/client-release.yml
+++ b/.github/workflows/client-release.yml
@@ -35,7 +35,7 @@ jobs:
           node build.js;
           mkdir dist;
           cd dist;
-          cp ../../License/* ./;
+          cp ../../../License/* ./;
           tar -czvf SimpleWeb-NodeRED.tar.gz ../*.json;
 
       - uses: "marvinpinto/action-automatic-releases@latest"
