--- a/Clients/SimpleWeb/dummyServer/package.json
+++ b/Clients/SimpleWeb/dummyServer/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "Mitchell R<https://github.com/mrinc>",
+  "license": "SEE REPO",
   "dependencies": {
     "express": "^4.17.1",
     "mqtt": "^4.2.8",
