--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,9 @@ Icon
 Firmware/UT61EWiFiD1MiniDisplay/config.h
 .Arduino
 node_modules
+
+node_modules
+/Clients/build/release
+/Clients/Desktop/out
+/Clients/Node-RED/dist
+/Clients/SimpleWeb/web/dist
