--- a/.github/workflows/client-release.yml
+++ b/.github/workflows/client-release.yml
@@ -2,9 +2,9 @@ name: Build and release
 
 on:
   push:
-    branches: 
-      - 'main'
-      - 'master'
+    branches:
+      - "main"
+      - "master"
 
 jobs:
   build-and-release:
@@ -17,6 +17,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Use Node.js ${{ matrix.node-version }}
+        id: build-and-release
         uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node-version }}
@@ -28,6 +29,6 @@ jobs:
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
           automatic_release_tag: "latest"
           prerelease: false
-          title: "Clients"
+          title: "Clients-${{ steps.build-and-release.output.RELVERSION }}"
           files: |
             Clients/build/release/*.tar.gz
