Build changes in prep for multi-plat-build. Dev build can build desktop app

--- a/.gitignore
+++ b/.gitignore
@@ -9,5 +9,6 @@ node_modules
 node_modules
 /Clients/build/release
 /Clients/Desktop/out
+/Clients/Desktop/src/index.html
 /Clients/Node-RED/dist
 /Clients/SimpleWeb/web/dist
