--- a/.github/workflows/client-release.yml
+++ b/.github/workflows/client-release.yml
@@ -12,6 +12,7 @@ jobs:
 
     strategy:
       matrix:
+        #os: [ubuntu-latest, macos-latest, windows-latest]
         node-version: [14.x]
 
     outputs:
