--- a/Clients/Desktop/package.json
+++ b/Clients/Desktop/package.json
@@ -9,7 +9,7 @@
     "make": "electron-forge make"
   },
   "keywords": [],
-  "author": "OXRS.io",
+  "author": "SuperHouse",
   "license": "SEE REPO",
   "devDependencies": {
     "@electron-forge/cli": "^6.0.0-beta.59",
